fix(design): forgot overflow hidden in PadButton

--- a/src/style/PadButton.sass
+++ b/src/style/PadButton.sass
@@ -2,6 +2,7 @@
 	align-items: center
 	justify-content: center
 	display: inline-flex
+	overflow: hidden
 	margin: 8px
 	border-radius: 6px
 	box-sizing: border-box
